--- a/os/Makefile
+++ b/os/Makefile
@@ -1,3 +1,7 @@
+# Arguments
+# GDB := riscv64-unknown-elf-gdb
+GDB := gdb-multiarch
+
 # Building
 TARGET := riscv64gc-unknown-none-elf
 MODE := release
@@ -46,7 +50,8 @@ clean:
 	@cargo clean
 
 disasm: kernel
-	@$(OBJDUMP) $(DISASM) $(KERNEL_ELF) | less
+	$(OBJDUMP) $(DISASM) $(KERNEL_ELF) > target/os.dump.symbol
+	$(OBJDUMP) -D $(KERNEL_ELF) > target/os.dump.asm
 
 disasm-vim: kernel
 	@$(OBJDUMP) $(DISASM) $(KERNEL_ELF) > $(DISASM_TMP)
@@ -61,18 +66,18 @@ QEMU_ARGS := -machine virt \
 			 -device loader,file=$(KERNEL_BIN),addr=$(KERNEL_ENTRY_PA)
 
 run-inner: build
-	@qemu-system-riscv64 $(QEMU_ARGS)
+	qemu-system-riscv64 $(QEMU_ARGS)
 
 debug: build
 	@tmux new-session -d \
 		"qemu-system-riscv64 $(QEMU_ARGS) -s -S" && \
-		tmux split-window -h "riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
+		tmux split-window -h "$(GDB) -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'" && \
 		tmux -2 attach-session -d
 
 gdbserver: build
-	@qemu-system-riscv64 $(QEMU_ARGS) -s -S
+	qemu-system-riscv64 $(QEMU_ARGS) -s -S
 
 gdbclient:
-	@riscv64-unknown-elf-gdb -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
+	@$(GDB) -ex 'file $(KERNEL_ELF)' -ex 'set arch riscv:rv64' -ex 'target remote localhost:1234'
 
 .PHONY: build env kernel clean disasm disasm-vim run-inner gdbserver gdbclient
